# dmi

./: .gitignore  noxfile.py  package.json  pyproject.toml  skaffold.yaml
.github/workflows/: ci.yml
images/backend/: Dockerfile
images/frontend/: Dockerfile
manifests/base/: kustomization.yml
manifests/ci/: test.yml
manifests/components/api/: deployment.yml  ingress.yml
manifests/components/frontend/: deployment.yml  ingress.yml  kustomization.yml  service.yml
manifests/development/: kustomization.yml
